public/assets/styl/components/player-controller.styl
#player-controller
	text-align left
	position fixed
	left 0
	bottom 0
	width 100%
	height 3.5rem
	overflow visible
	background $background-primary-color
	z-index 99999

	@media screen and (min-width: $desktop-breakpoint)
		overflow hidden

	.left
		display block
		width 100%
		position relative
		top -3.5rem
		background $background-primary-color

		@media screen and (min-width: $desktop-breakpoint)
			width 80%
			top 3rem
			position static

		.custom-embed-info
			display none
			padding 1rem
			font-weight bold

		ul
			position relative
			height 3.5rem

			li
				display inline-block
				font-weight bold

				&.imgEl
					width 3.5rem
					height 3.5rem
					position absolute
					top 0
					left 0

				&.infoContainer
					padding 0 0 0 3.5rem
					height 100%
					width 100%

					.infoContainerInner
						width 100%
						height 100%
						padding 0.5rem 5rem 0.5rem 1rem
						position relative
						white-space nowrap

						span
							display inline-block
							width 100%
							overflow hidden

						.currentDJSong
							color $meta-color
							font-size 0.85rem
							display block
							line-height 1

						.progressBg
							background $accent-color
							height 0.3rem
							position absolute
							left 0
							bottom 0

						.currentTime
							position absolute
							right 1rem
							top 1rem

							span
								display inline

	.right
		position absolute
		right 0
		top 0
		height 3.5rem
		background $light-gray
		width 100%

		@media screen and (min-width: $desktop-breakpoint)
			width 20% //TODO: May need to up this to 25% when grab count is added

		ul
			li
				display block
				float left
				padding 0
				font-size 1.1rem
				font-weight bold
				cursor pointer
				width 25%
			
				//TODO: Remove when grab count is added
				&.add-to-playlist
					@media screen and (min-width: $desktop-breakpoint)
						width 16%
						text-align center

				@media screen and (min-width: $desktop-breakpoint)
					 width 28%
				//end remove

				a
					padding 1rem 1rem
					display block
					text-align center
					
					&.display-browser
						
						span
							margin 0 .1rem
							
							&.queue-position
								margin-left 0.3rem

							&.queue-position-split
								display none
						
						[class^="queue-"]
						[class*=" queue-"]
							position relative
							top -0.1rem

				&:before
					font-size 1.2rem

				.dub-counter
					margin-left 0.5rem
					display relative
					top -0.1rem

				.dubdown
				.dubup
					min-width 6rem
					padding-right 0.5rem
					padding-left 0.5rem

					&:hover
						color inherit

						span
							color inherit

				.dubdown
					&.voted
						background $accent-other-color

						span
							color $dark-gray

					.icon-arrow-down
						color $accent-other-color

						&:before
							@extend .icon-downvote:before

				.dubup
					&.voted
						background $accent-color

						span
							color $dark-gray

					.icon-arrow-up
						color $accent-color

						&:before
							@extend .icon-upvote:before

.not-logged-in
	#player-controller
		.right
			ul
				li
					width 50%

					a
						width 100%
						min-width 6rem

		.left
			@media screen and (min-width: $desktop-breakpoint)
				padding-right 12rem

.no-song-playing
	#player-controller
		.left
			ul
				li
					&.infoContainer
						padding-top 0.5rem
						padding-left 0

